Patches to add openelec os settings

--- a/packages/mediacenter/service.openelec.settings/install
+++ b/packages/mediacenter/service.openelec.settings/install
@@ -22,5 +22,7 @@
 
 . config/options $1
 
-mkdir -p $INSTALL/usr/share/xbmc/addons/service.openelec.settings
-  cp -R $PKG_BUILD/* $INSTALL/usr/share/xbmc/addons/service.openelec.settings
+mkdir -p $INSTALL/usr/share/xbmc/addons/os.openelec.settings
+cp -R $PKG_DIR/source/* $INSTALL/usr/share/xbmc/addons/os.openelec.settings
+cp -R $PKG_DIR/config/* $INSTALL/usr/share/xbmc/addons/os.openelec.settings
+$SED "s|@OS_VERSION@|$OS_VERSION|g" -i $INSTALL/usr/share/xbmc/addons/os.openelec.settings/addon.xml
