--- a/packages/mediacenter/plex/plexht/install
+++ b/packages/mediacenter/plex/plexht/install
@@ -22,92 +22,64 @@
 
 . config/options $1
 
-#PYTHON_LIBDIR="`ls -d $INSTALL/usr/lib/python*`"
+PYTHON_LIBDIR="`ls -d $INSTALL/usr/lib/python*`"
 
-#mkdir -p $INSTALL/usr/bin
-#  cp $PKG_DIR/scripts/cputemp $INSTALL/usr/bin
-#  cp $PKG_DIR/scripts/gputemp $INSTALL/usr/bin
-#  cp $PKG_DIR/scripts/wait_on_xbmc_exit $INSTALL/usr/bin
-#  cp $PKG_BUILD/tools/EventClients/Clients/XBMC\ Send/xbmc-send.py $INSTALL/usr/bin/xbmc-send
-#  cp $PKG_DIR/scripts/setwakeup.sh $INSTALL/usr/bin
+mkdir -p $INSTALL/usr/bin
+  cp $PKG_DIR/scripts/cputemp $INSTALL/usr/bin
+  cp $PKG_DIR/scripts/gputemp $INSTALL/usr/bin
+  cp $PKG_DIR/scripts/wait_on_xbmc_exit $INSTALL/usr/bin
+  cp $PKG_BUILD/tools/EventClients/Clients/XBMC\ Send/xbmc-send.py $INSTALL/usr/bin/xbmc-send
+  cp $PKG_DIR/scripts/setwakeup.sh $INSTALL/usr/bin
 
-#mkdir -p $INSTALL/usr/lib/plexhometheater
-#  cp $PKG_BUILD/build/plex/plexhometheater $INSTALL/usr/lib/plexhometheater
-
-#cd $PKG_BUILD
-#find ./ -name *.so -type f -exec install -D "{}" $ROOT/$INSTALL/usr/lib/plexhometheater/"{}" ";"
-
-
-# install project specific configs
-#  mkdir -p $INSTALL/usr/share/xbmc/config
-#    if [ -f $PROJECT_DIR/$PROJECT/xbmc/guisettings.xml ]; then
-#      cp -R $PROJECT_DIR/$PROJECT/xbmc/guisettings.xml $INSTALL/usr/share/xbmc/config
-#    fi
-#
-#    if [ -f $PROJECT_DIR/$PROJECT/xbmc/sources.xml ]; then
-#      cp -R $PROJECT_DIR/$PROJECT/xbmc/sources.xml $INSTALL/usr/share/xbmc/config
-#    fi
-#
-#  mkdir -p $INSTALL/usr/share/xbmc/system/
-#    if [ -f $PROJECT_DIR/$PROJECT/xbmc/advancedsettings.xml ]; then
-#      cp $PROJECT_DIR/$PROJECT/xbmc/advancedsettings.xml $INSTALL/usr/share/xbmc/system/
-#    else
-#      cp $PKG_DIR/config/advancedsettings.xml $INSTALL/usr/share/xbmc/system/
-#    fi
-#
-#if [ "$XBMC_EXTRA_FONTS" = yes ]; then
-#  mkdir -p $INSTALL/usr/share/xbmc/media/Fonts
-#    cp $PKG_DIR/fonts/*.ttf $INSTALL/usr/share/xbmc/media/Fonts
-#fi
-
-#  if [ -f $PROJECT_DIR/$PROJECT/xbmc/advancedsettings.xml ]; then
-#    cp $PROJECT_DIR/$PROJECT/xbmc/advancedsettings.xml $INSTALL/usr/share/XBMC/system/
-#  else
-#    cp $PKG_DIR/config/advancedsettings.xml $INSTALL/usr/share/XBMC/system/
-#  fi
-
-
-#PYTHON_LIBDIR="`ls -d $INSTALL/usr/lib/python*`"
-
-mkdir -p $INSTALL/usr/lib/XBMC
+mkdir -p $INSTALL/usr/lib/plexhometheater/system
+  cp $PKG_BUILD/build/plex/plexhometheater $INSTALL/usr/lib/plexhometheater
 
 cd $PKG_BUILD
-find system addons \
+find build/lib -not \( -name CMakeFiles -prune \) \
     -regextype posix-extended -type f \
     -not -iregex ".*svn.*|.*win32(dx)?\.vis|.*osx\.vis" \
     -iregex ".*-linux.*|.*-arm.*|.*\.vis|.*\.xbs" \
-    -exec install -D "{}" $ROOT/$INSTALL/usr/lib/XBMC/"{}" ";"
+    -exec cp "{}" $ROOT/$INSTALL/usr/lib/plexhometheater/system/ ";"
 
 find addons language media sounds userdata system \
     -regextype posix-extended -type f \
     -not -iregex ".*-linux.*|.*-arm.*|.*\.vis|.*\.xbs|.*svn.*|.*\.orig|.*\.so|.*\.dll|.*\.pyd|.*python|.*\.zlib|.*\.conf" \
-    -exec install -D -m 0644 "{}" $ROOT/$INSTALL/usr/share/XBMC/"{}" ";"
+    -exec install -D -m 0644 "{}" $ROOT/$INSTALL/usr/share/xbmc/"{}" ";"
 cd -
 
+if [ ! "$XBMC_SCR_RSXS" = yes ]; then
+  rm -rf $ROOT/$INSTALL/usr/share/xbmc/addons/screensaver.rsxs.*
+fi
 
-mkdir -p $INSTALL/usr/share/XBMC/addons
-    cp -R $PKG_DIR/config/os.openelec.tv $INSTALL/usr/share/XBMC/addons
-    $SED "s|@OS_VERSION@|$OS_VERSION|g" -i $INSTALL/usr/share/XBMC/addons/os.openelec.tv/addon.xml
-    cp -R $PKG_DIR/config/repository.openelec.tv $INSTALL/usr/share/XBMC/addons
-    $SED "s|@ADDON_URL@|$ADDON_URL|g" -i $INSTALL/usr/share/XBMC/addons/repository.openelec.tv/addon.xml
+if [ ! "$XBMC_VIS_PROJECTM" = yes ]; then
+  rm -rf $ROOT/$INSTALL/usr/share/xbmc/addons/visualization.projectm
+fi
+
+rm -rf $ROOT/$INSTALL/usr/share/xbmc/addons/visualization.dxspectrum
+rm -rf $ROOT/$INSTALL/usr/share/xbmc/addons/visualization.itunes
+rm -rf $ROOT/$INSTALL/usr/share/xbmc/addons/visualization.milkdrop
+rm -rf $INSTALL/usr/share/xbmc/addons/script.module.pysqlite
+rm -rf $INSTALL/usr/share/xbmc/addons/script.module.simplejson
+
+mkdir -p $INSTALL/usr/share/xbmc/addons
+    cp -R $PKG_DIR/config/os.openelec.tv $INSTALL/usr/share/xbmc/addons
+    $SED "s|@OS_VERSION@|$OS_VERSION|g" -i $INSTALL/usr/share/xbmc/addons/os.openelec.tv/addon.xml
+    cp -R $PKG_DIR/config/repository.openelec.tv $INSTALL/usr/share/xbmc/addons
+    $SED "s|@ADDON_URL@|$ADDON_URL|g" -i $INSTALL/usr/share/xbmc/addons/repository.openelec.tv/addon.xml
+
+mkdir -p $PYTHON_LIBDIR/site-packages/xbmc
+  cp -R $PKG_BUILD/tools/EventClients/lib/python/* $PYTHON_LIBDIR/site-packages/xbmc
 
 
-
-
-mkdir -p $INSTALL/usr/share/XBMC/system/
+mkdir -p $INSTALL/usr/share/xbmc/system/
 mkdir -p $INSTALL/usr/bin/
 
-cp $PKG_DIR/config/advancedsettings.xml $INSTALL/usr/share/XBMC/system/
-cp $PKG_DIR/config/advancedsettings.xml $INSTALL/usr/share/XBMC/
-cp $PKG_DIR/config/guisettings.xml $INSTALL/usr/share/XBMC/system/
-cp $PKG_DIR/config/guisettings.xml $INSTALL/usr/share/XBMC/
+cp $PKG_DIR/config/advancedsettings.xml $INSTALL/usr/share/xbmc/system/
+cp $PKG_DIR/config/advancedsettings.xml $INSTALL/usr/share/xbmc/
+cp $PKG_DIR/config/guisettings.xml $INSTALL/usr/share/xbmc/system/
+cp $PKG_DIR/config/guisettings.xml $INSTALL/usr/share/xbmc/
 cp $PKG_DIR/bin/pastebin $INSTALL/usr/bin
 cp $PKG_DIR/bin/pastelog $INSTALL/usr/bin
 chmod +x $INSTALL/usr/bin
 
 
-
-
-
-cd $PKG_BUILD/build
-make install DESTDIR=$ROOT/$INSTALL
