--- a/packages/debug/popt/install
+++ b/packages/debug/popt/install
@@ -1,3 +1,5 @@
+#!/bin/sh
+
 ################################################################################
 #      This file is part of OpenELEC - http://www.openelec.tv
 #      Copyright (C) 2009-2012 Stephan Raue (stephan@openelec.tv)
@@ -18,20 +20,9 @@
 #  http://www.gnu.org/copyleft/gpl.html
 ################################################################################
 
-PKG_NAME="debug"
-PKG_VERSION=""
-PKG_REV="1"
-PKG_ARCH="any"
-PKG_LICENSE="GPL"
-PKG_SITE="http://www.openelec.tv"
-PKG_URL=""
-PKG_DEPENDS="acpica cpuid dmidecode dstat evtest gdb hddtemp htop i2c-tools iftop pmtools powertop smem strace wireless_tools tcpdump iperf oprofile"
-PKG_BUILD_DEPENDS="toolchain popt"
-PKG_PRIORITY="optional"
-PKG_SECTION="debug"
-PKG_SHORTDESC="debug: Metapackage for installing debugging tools"
-PKG_LONGDESC="debug is a Metapackage for installing debugging tools"
-PKG_IS_ADDON="no"
+. config/options $1
 
-PKG_AUTORECONF="no"
-
+echo "Install dir:" 
+echo $INSTALL
+cd $PKG_BUILD
+make install DESTDIR=$INSTALL
