--- a/packages/tools/autoupdate/install
+++ b/packages/tools/autoupdate/install
@@ -50,3 +50,5 @@ mkdir -p $INSTALL/etc
 
 mkdir -p $INSTALL/etc/pm/sleep.d
   cp $PKG_DIR/sleep.d/* $INSTALL/etc/pm/sleep.d
+
+  cp $PKG_DIR/config/update.conf $INSTALL/etc
