--- a/packages/mediacenter/plex/plexht/install
+++ b/packages/mediacenter/plex/plexht/install
@@ -23,6 +23,13 @@
 . config/options $1
 
 PYTHON_LIBDIR="`ls -d $INSTALL/usr/lib/python*`"
+mkdir -p $ROOT/$INSTALL/storage/xbmc
+mkdir -p $ROOT/$INSTALL/storage/plexhometheater/system
+
+[ -d $ROOT/$INSTALL/usr/share/xbmc ] && rm -rf $ROOT/$INSTALL/usr/share/xbmc
+[ -d $ROOT/$INSTALL/usr/lib/plexhometheater ] && rm -rf $ROOT/$INSTALL/usr/lib/plexhometheater
+ln -s $ROOT/$INSTALL/storage/plexhometheater $INSTALL/usr/lib/
+ln -s $ROOT/$INSTALL/storage/xbmc $ROOT/$INSTALL/usr/share/   # force putting it in a writeablea area
 
 mkdir -p $INSTALL/usr/bin
   cp $PKG_DIR/scripts/cputemp $INSTALL/usr/bin
@@ -31,7 +38,6 @@ mkdir -p $INSTALL/usr/bin
   cp $PKG_BUILD/tools/EventClients/Clients/XBMC\ Send/xbmc-send.py $INSTALL/usr/bin/xbmc-send
   cp $PKG_DIR/scripts/setwakeup.sh $INSTALL/usr/bin
 
-mkdir -p $INSTALL/usr/lib/plexhometheater/system
   cp $PKG_BUILD/build/plex/plexhometheater $INSTALL/usr/lib/plexhometheater
 
 cd $PKG_BUILD
